# vk-zig-engine

./: .gitignore  README.md  build.zig  build.zig.zon
src/: macos_surface.h  macos_surface.m  main.zig  root.zig
src/headers/: glfw.h  vulkan.h
src/imgui_wrapper/: imgui_wrapper.cpp  imgui_wrapper.h
src/shaders/: triangle.vert.spv
zig-pkg/N-V-__8AADGbAADcSgAMV_BzmUHtufxO65p2fWn8YYOXU16O/: .gitlab-ci.yml
zig-pkg/N-V-__8AAFIgAQCJSug37AGy4zypGtiDtUR9wtQa8U74Nm0a/: .gitlab-ci.yml  autogen.sh
zig-pkg/N-V-__8AAG86ZgA2-SHGTO4n81-Sj8LNvSASCKZ91wOWZ7Sg/: .gitlab-ci.yml  configure.ac
zig-pkg/N-V-__8AAG86ZgA2-SHGTO4n81-Sj8LNvSASCKZ91wOWZ7Sg/specs/: XI2proto.txt
zig-pkg/N-V-__8AAGlRAgBdkf1F-Y410qIz6cV4C62ZAUk_SGeUVriw/: .gitignore  .gitlab-ci.yml  autogen.sh
zig-pkg/N-V-__8AAHTdBwAEWsgYzKEVP-WmGT0wYKIJjBtqH1No6y73/: .gitlab-ci.yml
zig-pkg/N-V-__8AAHr0JACeIVK5CkrixKeVluYqJ4OPDz1ss5bvTWd9/: .gitlab-ci.yml  meson.build
zig-pkg/N-V-__8AAHr0JACeIVK5CkrixKeVluYqJ4OPDz1ss5bvTWd9/src/: scanner.c  wayland-server.c  wayland-util.c
zig-pkg/N-V-__8AAHr0JACeIVK5CkrixKeVluYqJ4OPDz1ss5bvTWd9/tests/: display-test.c  test-compositor.c
zig-pkg/N-V-__8AAKtlAgAAqwksheZkCSajEEPpi2XivNet-_3hZyz2/: .gitlab-ci.yml
zig-pkg/N-V-__8AAMCWEADA0AS-1LfBEtixZLJAb_XQKQpgSmR2uxAO/: meson.build
zig-pkg/N-V-__8AAMCWEADA0AS-1LfBEtixZLJAb_XQKQpgSmR2uxAO/tests/: meson.build
zig-pkg/N-V-__8AAMXRAADYeHz48Y1IuZUzOOqRvOO7f0wrdeNkWcBF/: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  autogen.sh  configure.ac
zig-pkg/N-V-__8AANL5xACqderCBKpnIFKe282dZAikvyc--kNSKWgd/: .gitignore  .gitlab-ci.yml
zig-pkg/N-V-__8AANorBADbt-RlITZJofNvQWTiaQlv7r7lWYtxAqGx/: .gitignore  .gitlab-ci.yml  autogen.sh
zig-pkg/N-V-__8AAPVzDQBJt3bUATh5SVq-T6QI-Ns9v2pSScvG_cwH/: .gitlab-ci.yml
zig-pkg/N-V-__8AAPmRAwD2MFbqdgQz922YH3E6X_64ouktIekZrgb6/: configure.ac
zig-pkg/X11_zig-1.0.0-UuAzbN8KwAA3SJ6atk8IwHDZZ0CTX_RD3xO5L0NdMq6D/: build.zig  build.zig.zon
zig-pkg/X11_zig-1.0.0-UuAzbN8KwAA3SJ6atk8IwHDZZ0CTX_RD3xO5L0NdMq6D/xcb/xcb/: xprint.c
zig-pkg/glfw_zig-1.0.0-NrvYoyvRGQDgKTTvaAaJLZWQsL6AL5F8jGsBla2V275Y/: build.zig  build.zig.zon
zig-pkg/toolbox-2.0.2-kRAu4BibAADKQMUUYyFacpyGgKCWxPyrcxa6ziZQZXwH/: build.zig  build.zig.zon
zig-pkg/vulkan-0.0.0-r7Ytx7t9AwBjKG7tnhReEVo0P2fvstTc8G_0qF8iog_V/: README.md  build.zig.zon
zig-pkg/vulkan-0.0.0-r7Ytx7t9AwBjKG7tnhReEVo0P2fvstTc8G_0qF8iog_V/src/: main.zig
zig-pkg/vulkan-0.0.0-r7Ytx7t9AwBjKG7tnhReEVo0P2fvstTc8G_0qF8iog_V/src/vulkan/: c_parse.zig  generator.zig  parse.zig  registry.zig  render.zig
zig-pkg/vulkan_zig-1.0.0-p2wg3mKLRwHDyei6d373hqBwrdVEVPm8PNQajxML0AEp/: build.zig  build.zig.zon
zig-pkg/wayland_zig-1.0.0-JmY-j65WCgDm-FxB2UvYkXhXqv7Io8eTxFDjsSZ8mno2/: build.zig  build.zig.zon
zig-pkg/wayland_zig-1.0.0-JmY-j65WCgDm-FxB2UvYkXhXqv7Io8eTxFDjsSZ8mno2/wayland/: pointer-constraints-unstable-v1-client-protocol.h  wayland-client-protocol-code.h  wayland-client-protocol.h  wayland-server-core.h  wayland-server-protocol.h  xdg-decoration-unstable-v1-client-protocol-code.h  xdg-decoration-unstable-v1-client-protocol.h  xdg-shell-client-protocol.h
